--- a/Sports_Players/Info.plist
+++ b/Sports_Players/Info.plist
@@ -62,5 +62,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Please Allow Access From Rehab</string>
 </dict>
 </plist>
